--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
 
 #meals{
   display: grid;
-  grid-gap: 1.5rem;
+  gap: 1.5rem;
   justify-content: center;
   align-items: stretch;
   grid-template-columns: 1fr;
@@ -86,7 +86,7 @@
   grid-template-columns: 1fr;
   grid-template-rows: repeat(2, 1fr);
   grid-auto-flow: row;
-  grid-gap: 1.5rem;
+  gap: 1.5rem;
 }
 
 #meal-details-box-close-button{
